creditas-sf/force-app/main/default/objects/ContactDetailsSection__c/ContactDetailsSection__c.object-meta.xml
<CustomObject>
    <label>Seção Dados de Contato</label>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Seção Dados de Contato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seção Dados de Contato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>