creditas-sf/force-app/main/default/objects/ContactDetailsSection__c/fields/EmailObservation__c.field-meta.xml
<CustomField>
    <fullName>EmailObservation__c</fullName>
    <label>Observação do e-mail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>