creditas-sf/force-app/main/default/objects/ContactDetailsSection__c/fields/EmailReason__c.field-meta.xml
<CustomField>
    <fullName>EmailReason__c</fullName>
    <label>Motivo do e-mail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>