creditas-sf/force-app/main/default/objects/ContactDetailsSection__c/fields/EmailSubReason__c.field-meta.xml
<CustomField>
    <fullName>EmailSubReason__c</fullName>
    <label>Sub-motivo do e-mail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>