creditas-sf/force-app/main/default/objects/ContactDetailsSection__c/fields/MobileObservation__c.field-meta.xml
<CustomField>
    <fullName>MobileObservation__c</fullName>
    <label>Observação do celular</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>