creditas-sf/force-app/main/default/objects/ContactDetailsSection__c/fields/MobileReason__c.field-meta.xml
<CustomField>
    <fullName>MobileReason__c</fullName>
    <label>Motivo do celular</label>
    <length>100</length>
    <type>Text</type>
</CustomField>