creditas-sf/force-app/main/default/objects/ContactDetailsSection__c/fields/MobileSubReason__c.field-meta.xml
<CustomField>
    <fullName>MobileSubReason__c</fullName>
    <label>Sub-motivo do celular</label>
    <length>100</length>
    <type>Text</type>
</CustomField>